    but we do not support those under these names currently.)

      X[6]a = XXXXXXa
      F[2:4]a = XX(a | X(a | Xa))
      G[2:4]a = XX(a & X(a & Xa))

    The corresponding constructors (for C++ and Python) are
      formula::X(unsigned, formula)
      formula::F(unsigned, unsigned, formula)
      formula::G(unsigned, unsigned, formula)

  - The twa_graph class has a new dump_storage_as_dot() method
    to show its data structure.  This is more conveniently used
    as aut.show_storage() in a Jupyter notebook.  See
    https://spot.lrde.epita.fr/ipynb/twagraph-internals.html

  - spot::generic_emptiness_check() is a new function that performs
    emptiness checks of twa_graph_ptr (i.e., automata not built
    on-the-fly) with an *arbitrary* acceptance condition.  Its sister
    spot::generic_emptiness_check_scc() can be used to decide the
    emptiness of an SCC.  This is now used by
    twa_graph_ptr::is_empty(), twa_graph_ptr::intersects(), and
    scc_info::determine_unknown_acceptance().

  - The new function spot::to_parity() translates an automaton
    with arbitrary acceptance condition into a parity automaton,
    based on a last-appearance record (LAR) construction.

New in spot 2.6.2 (2018-09-28)

  Build:

  - We no longer distribute the Python-based CGI script + javascript
    code for the online translator.  Its replacement has its own
    repository: https://gitlab.lrde.epita.fr/spot/spot-web-app/

  Library:

  - When states are highlighted with more than 8 colors, print_dot()
    will add some extra markers to help distinguishing the colors.
    This helps with the fact that colors 8-15 are lighter versions of
    colors 0-7, and that higher color numbers cycle into this 16-color
    palette.

  Bugs fixed:

  - exclusive_ap::constrain() (called by autfilt --exclusive-ap=...)
    would incorrectly copy the "universal" property of the input
    automaton, causing print_hoa() to fail.

  - configure --disable-doxygen would actually enable it.
