@@ -1,6 +1,6 @@
 #! /bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2012, 2015, 2017 Laboratoire de Recherche et Développement
+# Copyright (C) 2012, 2015, 2017, 2018 Laboratoire de Recherche et Développement
 # de l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -26,16 +26,33 @@
 set -e
 
 # Removing W,M in this formula caused a segfault at some point.
-run 0 ltlfilt --remove-wm >out <<EOF
+run 0 ltlfilt --remove-wm <<EOF | uniq >out
 (!((G(p0)) U ((F(p0)) M ((F(X(p1))) & ((p2) W (G(p2))))))) M (F(p0))
-(Fp0 U(Fp0&!(Gp0 U((FXp1 &(Gp2 R(p2|Gp2))) U(Fp0&FXp1&(Gp2 R(p2|Gp2)))))))
+F(Fp0 & !(Gp0 U ((FXp1 & G(p2 | Gp2)) U (Fp0 & FXp1 & G(p2 | Gp2)))))
 EOF
 
 # The first formula will be simplified to the second, so after uniq
 # the output should have one line.
-test `uniq out | wc -l` = 1
+test `wc -l <out` = 1
 
-for i in 'GFa' 'a R b' 'a W b' 'a M b'; do
+f='(Fp0 U(Fp0&!(Gp0 U((FXp1 &(Gp2 R(p2|Gp2))) U(Fp0&FXp1&(Gp2 R(p2|Gp2)))))))'
+test `ltlfilt -c --equivalent-to="$f" out` = 1
+
+
+# From issue #362.
+simon='!p0 W (p0 W (!p0 W (p0 W G!p0)))'
+ltlfilt --unabbrev=WRMF -f "$simon" -f 'FGFa' -f 'a M Fb' -f 'a R Gb' >out
+cat out
+cat >expected <<EOF
+G(!p0 | G(p0 | G(!p0 | G(p0 | G!p0))))
+G(1 U a)
+1 U (a & (1 U b))
+Gb
+EOF
+diff out expected
+
+
+for i in 'GFa' 'a R b' 'a W b' 'a M b' "$simon"; do
     for fg in '' F G GF; do
 	for rwm in '' R W M RW RM WM RWM; do
 	    ltlfilt -f "$i" --unabbrev=$fg$rwm --equivalent-to "$i" >out
